--- a/line.html
+++ b/line.html
@@ -9,6 +9,11 @@
 <script src="libraries/topojson.v1.min.js"></script>
 <script src="libraries/queue.v1.min.js"></script>
 <style>
+.voronoi path {
+  fill: none;
+  stroke:none;
+  pointer-events: all;
+}
 </style>
 </head>
 
@@ -20,18 +25,54 @@
 </body>
 
 <script>
+var monthFormatChart = d3.time.format("%m/%y");
+var dateFormat = d3.time.format("%Y-%m-%d");
+
+function uniq_fast(a) { // quickly drop duplicate values from an array
+    var seen = {};
+    var out = [];
+    var len = a.length;
+    var j = 0;
+    for(var i = 0; i < len; i++) {
+         var item = a[i];
+         if(seen[item] !== 1) {
+               seen[item] = 1;
+               out[j++] = item;
+         }
+    }
+    return out;
+}
+
+function deString(d) {
+	if (d==="") { 
+		return NaN;
+	} else {
+		return +d;
+	}
+}
+
+function processPrices(d, i) {
+	var state = {
+		state: d.state,
+		price: deString(d.meanPrice),
+		item: d.item,
+		date: dateFormat.parse(d.date),
+		weight: deString(d.weight)
+	};
+	return state;
+}
 
 queue()
-	.defer(d3.csv, "data/dataMonth.csv")
+	.defer(d3.csv, "data/priceStateData.csv", processPrices)
 	.await(ready);
 
-function ready(error,monthlyPrice) {
-	var monthFormatChart = d3.time.format("%m/%y");
-	var monthFormat = d3.time.format("%Y-%m");
-	var months = uniq_fast(monthlyPrice.map(function(d){ return monthFormat.parse(d.date.slice(0,7))})).sort(function(a,b) { return a - b;});
+function ready(error,priceData) {
 
-	var pricesStatewise = reshapeMonthlyPrice(monthlyPrice);
+	var product = "Cement Dangote";
+	priceData = priceData.filter(function(d) { return d.item===product});
+	var months = uniq_fast(priceData.map(function(d){ return d.date})).sort(function(a,b) { return a - b;});
 
+	var lineData = reshapeMonthlyPrice(priceData);
 
 	var lineContainerSize = {'width': 800, 'height': 400};
 	var lineChartSize = {'width': 800, 'height': 400};
@@ -51,7 +92,6 @@ function ready(error,monthlyPrice) {
 						height: h,
 						transform: "translate(" + margin.left + "," + margin.top + ")"
 					});
-<<<<<<< HEAD
 
 	lineChart.append("clipPath")
 		.attr('id', 'lineclip')
@@ -66,7 +106,7 @@ function ready(error,monthlyPrice) {
 				.domain(d3.extent(months))
 				.range([0, w]);
 	var yScale = d3.scale.linear()
-				.domain([0, d3.max(monthlyPrice.map(function(d) { return deString(d.price); }))*1.05])
+				.domain([0, d3.max(priceData.map(function(d) { return d.price; }))*1.05])
 				.range([h, 0]);
 
 	// var yAxis = d3.svg.axis()
@@ -125,7 +165,7 @@ function ready(error,monthlyPrice) {
 	lineChart.append("g")
 	.attr("class", "stateLines")
 	.selectAll("path")
-	.data(pricesStatewise)
+	.data(lineData)
 	.enter().append("path")
 	.attr("d", function(d) { d.line = this; return line(d.values); })
 	.attr("clip-path", 'url(#lineclip)')
@@ -135,115 +175,32 @@ function ready(error,monthlyPrice) {
 		return "#4D4D4D"
     });
 
-<<<<<<< HEAD
-//loading the dataset
-d3.csv("/data/dataMonth.csv", function(data) {
-	var format = d3.time.format("%Y-%m-%d")
-	var data = d3.nest()
-		.key(function(d){ return d.state})
-		.key(function(d){ return format.parse(d.date)})
-		.rollup(function(d){
-			return d3.sum(d, function(g){
-				return g.price
-			})
-		})
-		.entries(data)
-	console.log(data[0])
-	//xScale.domain([d3.min(data, function(d){return format.parse(d.date)}), d3.max(data, function(d){return format.parse(d.date)})])
-	//console.log(d3.min(data, function(d){return format.parse(d.date)}))
-=======
-=======
+    console.log(d3.nest()
+	          .key(function(d) { return xScale(d.month) + "," + yScale(d.price); })
+	          .rollup(function(v) { return v[0]; })
+	          .entries(d3.merge(lineData.map(function(d) { return d.values; })))
+	          .map(function(d) { return d.values; }))
+	var voronoi = d3.geom.voronoi()
+	    .x(function(d) { return xScale(d.month); })
+	    .y(function(d) { return yScale(d.price); })
+	    .clipExtent([[0, 0], [w, h]]);
 
-	lineChart.append("clipPath")
-		.attr('id', 'lineclip')
-		.append('rect')
-		.attr("x", 0)
-		.attr("width", w)
-		.attr("y", 0)
-		.attr("height", h);
+	  var voronoiGroup = lineChart.append("g")
+	      .attr("class", "voronoi");
 
-	//Defining charting variables
-	var xScale = d3.time.scale()
-				.domain(d3.extent(months))
-				.range([0, w]);
-	var yScale = d3.scale.linear()
-				.domain([0, d3.max(monthlyPrice.map(function(d) { return deString(d.price); }))*1.05])
-				.range([h, 0]);
+	  voronoiGroup.selectAll("path")
+	      .data(voronoi(d3.nest()
+	          .key(function(d) { return xScale(d.month) + "," + yScale(d.price); })
+	          .rollup(function(v) { return v[0]; })
+	          .entries(d3.merge(lineData.map(function(d) { return d.values; })))
+	          .map(function(d) { return d.values; })))
+	    .enter().append("path")
+	      .attr("d", function(d) { return "M" + d.join("L") + "Z"; })
+	      .datum(function(d) { return d.point; })
+	      .style("cursor","default")
+	      // .on("mouseover", mouseover)
+	      // .on("mouseout", mouseout);
 
-	// var yAxis = d3.svg.axis()
-	// 			.scale(yScale)
-	// 			.orient('left')
-
-    var line = d3.svg.line()
-    .defined(function(d) { return (d !== null && !isNaN(d.price)); })
-    .x(function(d) { return xScale(d.month); })
-    .y(function(d) { return yScale(d.price); });
-
-	var xAxis = d3.svg.axis()
-        .scale(xScale)
-        .tickSize(7)
-        .ticks(6)
-        .tickFormat(function(d, i) {
-            return monthFormatChart(d);
-        })
-        .tickPadding(8)
-        .orient('bottom');
-
-    var xAxisNodes = lineChart.append("g")
-          .attr("class", "x axis")
-          .attr("transform", "translate(0," + h + ")")
-          .style("shape-rendering", "crispEdges")
-          .style("font-size", "10px")
-          .call(xAxis);
-
-    d3.selectAll(".x.axis path").style("display","none");
-    xAxisNodes.selectAll("line")
-        .style("stroke", function(d,i) {
-            return "black";
-        });
-
-    xAxisNodes.selectAll("text").style('font-family','Helvetica Neue').style('font-size',"12px");
-
-	var yAxis = d3.svg.axis()
-        .scale(yScale).ticks(5)
-        .orient("left")
-        .tickSize(-w)
-        .tickPadding(6)
-        .tickFormat(function(d) { return d});
-
-    var g = lineChart.append("g")
-        .attr("class", "y axis")
-        .style("font-size", "10px")
-        .call(yAxis)
-        .style("shape-rendering", "crispEdges");
-
-    d3.selectAll(".y.axis path").style("display","none").style("stroke","lightgrey").style("stroke-width","1px");
-    d3.selectAll(".y.axis line").style("stroke","lightgrey").style("stroke-width","1px");
-
-    d3.selectAll(".y.axis text").style('font-family','Helvetica Neue').style('font-size',"12px");
-
-
-	lineChart.append("g")
-	.attr("class", "stateLines")
-	.selectAll("path")
-	.data(pricesStatewise)
-	.enter().append("path")
-	.attr("d", function(d) { d.line = this; return line(d.values); })
-	.attr("clip-path", 'url(#lineclip)')
-	.style("fill","none")
-    .style("stroke-width","1px")
-    .style("stroke",function(d,i) { 
-		return "#4D4D4D"
-    });
-
->>>>>>> origin/master
-	function deString(d) {
-		if (d==="") { 
-			return NaN;
-		} else {
-			return +d;
-		}
-	}
 	function reshapeMonthlyPrice(monthlyPrice) {
 		var mainArray = [];
 		for (var i=0;i<monthlyPrice.length;i++) {
@@ -252,7 +209,7 @@ d3.csv("/data/dataMonth.csv", function(data) {
 					state:monthlyPrice[i].state,
 					values: [{
 						state:monthlyPrice[i].state,
-						month:monthFormat.parse(monthlyPrice[i].date.slice(0,7)),
+						month:monthlyPrice[i].date,
 						price:deString(monthlyPrice[i].price)
 					}]
 				};
@@ -260,7 +217,7 @@ d3.csv("/data/dataMonth.csv", function(data) {
 			} else {
 				var values = {
 					state:monthlyPrice[i].state,
-					month:monthFormat.parse(monthlyPrice[i].date.slice(0,7)),
+					month:monthlyPrice[i].date,
 					price:deString(monthlyPrice[i].price)
 				};
 				mainArray.filter(function(d) {return d.state===monthlyPrice[i].state})[0].values.push(values);
@@ -272,24 +229,37 @@ d3.csv("/data/dataMonth.csv", function(data) {
 		}
 		return mainArray;
 	}
-	function uniq_fast(a) { // quickly drop duplicate values from an array
-	    var seen = {};
-	    var out = [];
-	    var len = a.length;
-	    var j = 0;
-	    for(var i = 0; i < len; i++) {
-	         var item = a[i];
-	         if(seen[item] !== 1) {
-	               seen[item] = 1;
-	               out[j++] = item;
-	         }
-	    }
-	    return out;
-	}	
-<<<<<<< HEAD
->>>>>>> origin/master
-=======
->>>>>>> origin/master
+	function centerToStates(priceData,item) {
+		var array= []
+		var states = uniq_fast(priceData.map(function(d) {return d.state}))
+		states.forEach(function(d) {
+			var stateData = priceData.filter(function(e) {return e.state===d && e.item===item});
+			var meanPrice = NaN;
+			var weightTotal = NaN;
+
+			stateData.forEach(function(e) {
+				if (isNaN(meanPrice) && !isNaN(e.price)) {
+					meanPrice = e.price*e.weight;
+				}
+				else if (!isNaN(meanPrice) && !isNaN(e.price)) {
+					meanPrice += e.price*e.weight;
+				}
+
+				if (isNaN(weightTotal) && !isNaN(e.weight)) {
+					weightTotal = e.weight;
+				}
+				else if (!isNaN(weightTotal) && !isNaN(e.weight)) {
+					weightTotal += e.weight;
+				}
+			});
+
+			meanPrice = (meanPrice/weightTotal);
+			array.push({'state':d,'price':meanPrice})
+		});
+		return array;
+	}
+	
+
 
 }
 
